@@ -1,5 +1,5 @@
-AUX 50doxymacs-gentoo.el 342 RMD160 43346b1dced9c218662c32f31de24527203fba2b SHA1 ea94c5f57548794a3256fc2677302dd6575595d5 SHA256 bb26afef203dd88c22c658f08b370cb27bc8db0fb5963e8c18e9f6b824565dcd
+AUX 50doxymacs-gentoo.el 345 RMD160 021d2153335eb36b411b2f792127ecaa3b5f515b SHA1 0e088c03ba5b2e3713eb7362836980e03a30baef SHA256 60c0905b5636ea7f934906dc0bbb2da627cc98c7702e528826567244ecddcdda
 DIST doxymacs-1.8.0.tar.gz 133600 RMD160 f7a0657251d9220d75aec08dd796dbba3cfe99a5 SHA1 b2aafb4f2d20ceb63614c2b9f06d79dd484d8e2e SHA256 a23fd833bc3c21ee5387c62597610941e987f9d4372916f996bf6249cc495afa
-EBUILD doxymacs-1.8.0.ebuild 960 RMD160 c48cf4d64a2907f3021c4da83814b677956f1d92 SHA1 8c4aaf58f0bcff6eec928e7fcecb4ea99e9fac4d SHA256 751fbab4e9578af09c6ac4644ae3c7bd0e67dc6d7cba80950c9347b17d93478d
-MISC ChangeLog 1019 RMD160 6c49682cad18f757d05cf4f5c729d80be626410a SHA1 a33b94c0e869f69f15d18a2fc1a0e509161ec290 SHA256 5f9402a6fa42eef7a118093bbcbef47f9f140bad3bbd7ab0250e9aef056a1015
+EBUILD doxymacs-1.8.0.ebuild 982 RMD160 fc60c8f2b17c22d9700b21080e0bbad447caf973 SHA1 354b517193590d4ba70ff9b9ee9d9ba565fbf69a SHA256 cc5d2d83d17775198c9e782d10cc60c28ca95a84793e36058f2687814c23ea0d
+MISC ChangeLog 1187 RMD160 3a99cf6d3a5b1cd3732f37c523a79d7df558869f SHA1 898ddd688d5b023513d5fee5cc771dec74f7bba4 SHA256 c7d950fe2948094431f5d798e91f886dc4aa654a9a92b674d0bc5ea5be0c53f0
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
