@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Jun 2007; Ulrich Mueller <ulm@gentoo.org> files/50doxymacs-gentoo.el,
+  doxymacs-1.8.0.ebuild:
+  Fix name of file loaded in siteinit. Add a die command to dodoc.
+
   29 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
   -doxymacs-1.7.0.ebuild:
   removed ebuild, as not needed
